@@ -58,6 +58,13 @@ QueryCommand.OP_QUERY = 2004;
  * Adds the read prefrence to the current command
  */
 QueryCommand.prototype.setMongosReadPreference = function(readPreference, tags) {
+  // If we have readPreference set to true set to secondary prefered
+  if(readPreference == true) {
+    readPreference = 'secondaryPreferred';
+  } else if(readPreference == 'false') {
+    readPreference = 'primary';
+  }
+
   // Force the slave ok flag to be set if we are not using primary read preference
   if(readPreference != false && readPreference != 'primary') {
     this.queryOptions |= QueryCommand.OPTS_SLAVE;
